fix: update swagger api documentation
fix: update summarizer enpoints to accept file(s)
